--- a/NotifyDemoApp WatchKit App/Base.lproj/Interface.storyboard
+++ b/NotifyDemoApp WatchKit App/Base.lproj/Interface.storyboard
@@ -1,15 +1,34 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15505" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="15501"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="NotifyDemoApp_WatchKit_App" customModuleProvider="target">
+                    <color key="backgroundColor" red="0.53742083119999995" green="0.96620899439999997" blue="0.37532775979999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                </controller>
             </objects>
+            <point key="canvasLocation" x="34" y="31"/>
+        </scene>
+        <!--Static Notification Interface Controller-->
+        <scene sceneID="z0y-nO-tZB">
+            <objects>
+                <notificationController id="TUw-Db-H9v">
+                    <items>
+                        <label alignment="left" text="Alert Label" id="7ei-vd-iW4"/>
+                    </items>
+                    <notificationCategory key="notificationCategory" id="04q-H7-ynV"/>
+                    <connections>
+                        <outlet property="notificationAlertLabel" destination="7ei-vd-iW4" id="Bsr-bT-EEb"/>
+                    </connections>
+                </notificationController>
+            </objects>
+            <point key="canvasLocation" x="34" y="331"/>
         </scene>
     </scenes>
 </document>
